--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1,26 +1,20 @@
 @import "tailwindcss";
-
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --font-space-grotesk: "Space Grotesk", sans-serif;
 }
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-space-grotesk);
 }
+* {
+  box-sizing: border-box;
+}
+.container{
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0px 20px;
+
+}
+html {
+  scroll-behavior: smooth;
+}
+
